@@ -1,5 +1,6 @@
 5/6/25:
 
+- Create resetGame function to clear board and set to player 1's turn
 - Add test move function
 - Step 4 wip
 - Add end game conditions to stop from playing game if finished
